--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "sequelize-cli": "^6.6.1"
   },
   "name": "be-product-list",
   "description": "",
